--- a/index.html
+++ b/index.html
@@ -73,163 +73,308 @@
         <div class="item_one-d1">
           <span class="item_one-title">NEA</span>
           <div class="item_one-d1-text1">
-            <span class="item_one-subtext1">กรมส่งเสริมการค้าระหว่างประเทศ</span>
-            <p class="item_one-subtext2">ขับเคลือ่นการค้าระหว่างประเทศของไทยและเศรษฐกิจของประเทศไทยด้วย</p>
+            <span class="item_one-subtext1"
+              >กรมส่งเสริมการค้าระหว่างประเทศ</span
+            >
+            <p class="item_one-subtext2">
+              ขับเคลือ่นการค้าระหว่างประเทศของไทยและเศรษฐกิจของประเทศไทยด้วย
+            </p>
           </div>
         </div>
         <p class="item_one-subtext3">LOCAL TO GLOBAL</p>
-      <p class="item_one-subtext4">
-        สถาบันพัฒนาผู้ประกอบการการค้ายุคใหม่ (NEA)
-        กรมส่งเสริมการค้าระหว่างประเทศ กระทรวงพาณิชย์ ภายใต้แนวคิด
-        "เศรษฐกิจแบ่งปัน" (Sharing Economy)
-        มุ่งเน้นการใช้ประโยชน์สูงสุดจากทรัพยากรของภาครัฐทั้งในรูปแบบ On-site และ
-        Digital
-        เพื่อสร้างโอกาสให้ประชาชนและผู้ประกอบการในทุกภาคส่วนสามารถเข้าถึงความรู้ด้านการค้าระหว่างประเทศที่มีคุณภาพ
-        อย่างมีประสิทธิภาพ พร้อมผลักดันเศรษฐกิจของไทยจาก Local สู่ Global
-      </p>
+        <p class="item_one-subtext4">
+          สถาบันพัฒนาผู้ประกอบการการค้ายุคใหม่ (NEA)
+          กรมส่งเสริมการค้าระหว่างประเทศ กระทรวงพาณิชย์ ภายใต้แนวคิด
+          "เศรษฐกิจแบ่งปัน" (Sharing Economy)
+          มุ่งเน้นการใช้ประโยชน์สูงสุดจากทรัพยากรของภาครัฐทั้งในรูปแบบ On-site
+          และ Digital
+          เพื่อสร้างโอกาสให้ประชาชนและผู้ประกอบการในทุกภาคส่วนสามารถเข้าถึงความรู้ด้านการค้าระหว่างประเทศที่มีคุณภาพ
+          อย่างมีประสิทธิภาพ พร้อมผลักดันเศรษฐกิจของไทยจาก Local สู่ Global
+        </p>
       </div>
 
-    <div class="item two">
-      <div>
-        <img src="https://cdn-icons-png.flaticon.com/512/3699/3699049.png" />
-      </div>
-      <div class="item2-circle">
+      <div class="item two">
         <div>
-          <p>NEA</p>
-          <span>เข้าถึงประชาชน</span>
-          <p>และผู้ประกอบการกว่า</p>
+          <img src="https://cdn-icons-png.flaticon.com/512/3699/3699049.png" />
         </div>
+        <div class="item2-circle">
+          <div>
+            <p>NEA</p>
+            <span>เข้าถึงประชาชน</span>
+            <p>และผู้ประกอบการกว่า</p>
+          </div>
+          <div>
+            <p>35137</p>
+            <span>ครั้งใน</span> <span>55</span>
+            <span>กิจกรรมและ E-learning</span>
+          </div>
+          <p>รวมเป็นประชาชนและผู้ประกอบการกว่า</p>
+          <div>
+            <p>24208</p>
+            <span>ราย</span>
+            <p>(ไตรมาส 1-31 ส.ค 66)</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="item three">
         <div>
-          <p>35137</p>
-          <span>ครั้งใน</span> <span>55</span>
-          <span>กิจกรรมและ E-learning</span>
+          <p class="item_three-title">การต่อยอดสู่โอกาสทาง</p>
+          <p class="item_three-titletwo">การค้าระหว่างประเทศ</p>
+          <p class="item_three-titlethree">Customer's</p>
+          <p class="item_three-titlefour">Journey</p>
         </div>
-        <p>รวมเป็นประชาชนและผู้ประกอบการกว่า</p>
+        <p class="item_three-titlefive">
+          (ผปก. <span>321</span> ราย เข้าร่วมกิจกรรมทั่วโลก
+          <span>788</span> ครั้งใน)
+        </p>
         <div>
-          <p>24208</p>
-          <span>ราย</span>
-          <p>(ไตรมาส 1-31 ส.ค 66)</p>
+          <div>
+            <img
+              class="item_three-imgmap"
+              src="./image/black-world-map-globe-isolated-on-white-background-vector-28182564.jpg"
+            />
+          </div>
+          <div>
+            <div class="item_three-box1">
+              <p>รวม</p>
+              <p>api</p>
+              <p>ราย</p>
+            </div>
+            <div class="item_three-box1 box1">
+              <p>รวม</p>
+              <p>api</p>
+              <p>ราย</p>
+            </div>
+          </div>
+        </div>
+        <p class="item_three-text1">
+          เส้นทางของผู้ประกอบการคือ หนึ่งในข้อมูลบ่งชี้ที่สําคัญ
+          ของโอกาสในการก้าวสู่การค้าระหว่างประเทศของผู้ประกอบการ
+          ผ่านประวัติการเข้าร่วมกิจกรรมต่างๆ ของกรม อาทิ งานแสดง สินค้าในประเทศ
+          งานแสดงสินค้าต่างประเทศ และ Thaitrade.com
+        </p>
+        <div>
+          <div class="item_three-box2">
+            <div class="item_three-box2-1">
+              <img
+                class="item_three-box2-icon"
+                src="./image/circle-fill (1).svg"
+              />
+              <span class="item_three-box2-text1">
+                Online Business Matchig</span
+              >
+            </div>
+            <div class="item_three-box2-text2">398 ครั้ง</div>
+          </div>
+          <div class="item_three-box2">
+            <div class="item_three-box2-1">
+              <img
+                class="item_three-box2-icon"
+                src="./image/circle-fill (1).svg"
+              />
+              <span class="item_three-box2-text1">
+                งานแสดงสินค้านานาชาติในประเทศ</span
+              >
+            </div>
+            <div class="item_three-box2-text2">296 ครั้ง</div>
+          </div>
+          <div class="item_three-box2">
+            <div class="item_three-box2-1">
+              <img
+                class="item_three-box2-icon"
+                src="./image/circle-fill (1).svg"
+              />
+              <span class="item_three-box2-text1">
+                งานแสดงสินค้าต่างประเทศ</span
+              >
+            </div>
+            <div class="item_three-box2-text2">398 ครั้ง</div>
+          </div>
+          <div class="item_three-box2">
+            <div class="item_three-box2-1">
+              <img
+                class="item_three-box2-icon"
+                src="./image/circle-fill (1).svg"
+              />
+              <span class="item_three-box2-text1"> TopThai Brands</span>
+            </div>
+            <div class="item_three-box2-text2">398 ครั้ง</div>
+          </div>
+          <div class="item_three-box2">
+            <div class="item_three-box2-1">
+              <img
+                class="item_three-box2-icon"
+                src="./image/circle-fill (1).svg"
+              />
+              <span class="item_three-box2-text1"> Thailand Week</span>
+            </div>
+            <div class="item_three-box2-text2">398 ครั้ง</div>
+          </div>
+          <div class="item_three-box2">
+            <div class="item_three-box2-1">
+              <img
+                class="item_three-box2-icon"
+                src="./image/circle-fill (1).svg"
+              />
+              <span class="item_three-box2-text1"> โครงการ/กิจกรรมพิ เศษ</span>
+            </div>
+            <div class="item_three-box2-text2">398 ครั้ง</div>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="item three">
-      <div>
-        <p>การต่อยอดสู่โอกาสทาง</p>
-        <p>การค้าระหว่างประเทศ</p>
-        <p>Customer's</p>
-        <p>Journey</p>
+      <div class="item four">
+        <div class="item_four-d1-select">
+          <select id="select1"
+            class="form-select mb-3">
+            <option selected disabled>ปี</option>
+            <option value="1">One</option>
+          </select>
+          <select id="select1"
+            class="form-select form-select-lg mb-3"
+            aria-label=".form-select-lg example">
+            <option selected disabled>ไตรมาส</option>
+            <option value="1">One</option>
+
+          </select>
+        </div>
+        <div class="item_four-title">มูลค่าส่งออกรวม</div>
+        <div class="item_four-textd1">
+          <div class="item_four-textd1-d1">
+            <p class="item_four-textd1-1">1.2</p>
+            <p class="item_four-textd1-2">หมื่นล้านบาท</p>
+          </div>
+          <div class="item_four-textd1-3">
+            ขนาด <br> ผู้ประกอบการ    
+          </div>
+        </div>
+        <div class="item_four-textd2">
+          <p>API Graph</p>
+          <p>API Graph</p>
+          <p>API Graph</p>
+        </div>
+          <div class="item_four-card-body">
+            <div class="item_four-card-title">TOP 5</div>
+            <div class="item_four-card-titletwo">
+              ประเทศที่ส่งออก <br />
+              มูลค่าสูงสุด
+            </div>
+          </div>
+          <div class="item_four-card-bodytwo">
+            <div class="item_four-card-title-2">ประเทศ</div>
+            <div class="item_four-card-titletwo-2">
+              มูลค่าสูงสุด (ลบ.)
+            </div>
+          </div>
       </div>
-      <h4>
-        (ผปก. <span>321</span> ราย เข้าร่วมกิจกรรมทั่วโลก
-        <span>788</span> ครั้งใน)
-      </h4>
-      <div></div>
-    </div>
 
-    <div class="item four">
-      <div>
-        <select
-          class="form-select form-select-lg mb-3"
-          aria-label=".form-select-lg example"
-        >
-          <option selected>Open this select menu</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-        </select>
-        <select
-          class="form-select form-select-lg mb-3"
-          aria-label=".form-select-lg example"
-        >
-          <option selected>Open this select menu</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-        </select>
+      <div class="item five">
+        5
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">
+                การจัดกิจกรรมและการเข้าถึง แต่ละภาคส่วนของประเทศ
+              </h5>
+              <p class="card-text">
+                This is a longer card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div>มูลค่าส่งออกรวม</div>
-    </div>
+      <div class="item six">
+        6
+        <div class="card" style="width: 18rem">
+          <img src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">An item</li>
+            <li class="list-group-item">A second item</li>
+            <li class="list-group-item">A third item</li>
+          </ul>
+          <div class="card-body"></div>
+        </div>
+      </div>
 
-    <div class="item five">
-      5
-      <div class="col">
+      <div class="item seven">
+        <div class="card-itemseven">
+          <div class="item_seven-card-body">
+            <div class="item_seven-card-title">Top 10</div>
+            <div class="item_seven-card-titletwo">
+              สินค้าส่งออกของ <br />
+              ผู้ประกอบการ NEA
+            </div>
+          </div>
+          <div class="item_seven-d1">
+           <div class="item_seven-d1text1">
+            <p>1 อาหาร 977 ราย</p>
+            <p>2 เครื่องสำอาง 508 ราย</p>
+            <p>3 อาหารและเครื่องดื่ม 466 ราย</p>
+            <p>4 ของขวัญ 413 ราย</p>
+            <p>5 ของใช้ในบ้าน 407ราย</p>
+           </div>
+           <div class="item_seven-d1text2">
+            <p>6 แฟชั่น เครื่องหนัง 383 ราย</p>
+            <p>7 สิ่งทอ เครื่องหนัง และเครื่องประดับ 375 ราย</p>
+            <p>8 บริการทางการค้า 360 ราย</p>
+            <p>9 ผลิตภัณฑ์เพื่อความงาม 233 ราย</p>
+            <p>10 อื่น ๆ 205 ราย</p>
+           </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="item eight">
+         <div class="item_eight-d1">
+           <div class="item_eight-d1text1">
+            <p>สหรัฐอเมริกา</p>
+            <p>จีน</p>
+            <p>ญ่ีปุ่น</p>
+            <p>อินโดนีเซีย</p>
+            <p>ออสเตรเลีย</p>
+           </div>
+           <div class="item_eight-d1text2">
+            <p>128,382</p>
+            <p>83,048</p>
+            <p>78,165</p>
+            <p>54,432</p>
+            <p>51,432</p>
+           </div>
+          </div>
+          <hr class="item_eight-hr">
+          <div class="item_eight-d1">
+            <div class="item_eight-d1text1">
+            <p>รวม</p>
+           </div>
+           <div class="item_eight-d1text2">
+            <p>395,405</p>
+           </div>
+          </div>
+          </div>
+
+      <div class="item nine">
+        9
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">
-              การจัดกิจกรรมและการเข้าถึง แต่ละภาคส่วนของประเทศ
-            </h5>
+            <h5 class="card-title">Card title</h5>
             <p class="card-text">
-              This is a longer card with supporting text below as a natural
-              lead-in to additional content. This content is a little bit
-              longer.
+              With supporting text below as a natural lead-in to additional
+              content.
             </p>
           </div>
         </div>
       </div>
     </div>
-
-    <div class="item six">
-      6
-      <div class="card" style="width: 18rem">
-        <img src="..." class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
-          <li class="list-group-item">A second item</li>
-          <li class="list-group-item">A third item</li>
-        </ul>
-        <div class="card-body"></div>
-      </div>
-    </div>
-
-    <div class="item seven">
-      7
-      <div class="card w-50">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            With supporting text below as a natural lead-in to additional
-            content.
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="item eight">
-      8
-      <div class="card mb-3" style="max-width: 18rem">
-        <div class="card-header">Header</div>
-        <div class="card-body text-success">
-          <h5 class="card-title">Success card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-        </div>
-        <div class="card-footer bg-transparent border-success">รวม</div>
-      </div>
-    </div>
-
-    <div class="item nine">
-      9
-      <div class="card w-50">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            With supporting text below as a natural lead-in to additional
-            content.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
   </body>
 </html>
