--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               >กรมส่งเสริมการค้าระหว่างประเทศ</span
             >
             <p class="item_one-subtext2">
-              ขับเคลือ่นการค้าระหว่างประเทศของไทยและเศรษฐกิจของประเทศไทยด้วย
+              ขับเคลื่อนการค้าระหว่างประเทศของไทยและเศรษฐกิจของประเทศไทยด้วย
             </p>
           </div>
         </div>
@@ -95,7 +95,7 @@
 
       <div class="item two">
         <div>
-          <img src="https://cdn-icons-png.flaticon.com/512/3699/3699049.png" />
+          <!-- <img src="https://cdn-icons-png.flaticon.com/512/3699/3699049.png" /> -->
         </div>
         <div class="item2-circle">
           <div>
@@ -288,23 +288,23 @@
       </div>
 
       <div class="item six">
-        6
-        <div class="card" style="width: 18rem">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-          </ul>
-          <div class="card-body"></div>
+        <div class="item_six-title">
+          จำนวนประชากรและผู้ประกอบการ <br> ที่เข้าถึง NEA
         </div>
+        <p class="item_six-text1">(จำนวนครั้ง) *สถิติ E-Learning รวมภายใต้สถิติบุคคลทั่วไป</p>
+            <div class="item_six-card-body">
+            <div class="item_six-card-title">
+              <div class="item_six-d1">
+                <img class="item_six-img-1" src="./image/rectangle.png">
+                  <span>รวม (24,108 ราย)</span>
+                <!-- <p class="item_six-text2" ></p> -->
+              </div>
+            </div>
+            <div class="item_six-card-titletwo">
+              สินค้าส่งออกของ <br />
+              ผู้ประกอบการ NEA
+            </div>
+          </div>
       </div>
 
       <div class="item seven">
@@ -340,7 +340,7 @@
            <div class="item_eight-d1text1">
             <p>สหรัฐอเมริกา</p>
             <p>จีน</p>
-            <p>ญ่ีปุ่น</p>
+            <p>ญี่ปุ่น</p>
             <p>อินโดนีเซีย</p>
             <p>ออสเตรเลีย</p>
            </div>
