edit box2 card6

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 class="item_three-box2-icon"
                 src="./image/circle-fill (1).svg"
               />
-              <span class="item_three-box2-text1"> โครงการ/กิจกรรมพิ เศษ</span>
+              <span class="item_three-box2-text1"> โครงการ/กิจกรรมพิเศษ</span>
             </div>
             <div class="item_three-box2-text2">398 ครั้ง</div>
           </div>
@@ -296,13 +296,16 @@
             <div class="item_six-card-title">
               <div class="item_six-d1">
                 <img class="item_six-img-1" src="./image/rectangle.png">
-                  <span>รวม (24,108 ราย)</span>
-                <!-- <p class="item_six-text2" ></p> -->
+                  <span class="item_six-subtext1">รวม (24,108 ราย)</span> <br>
+                <img class="item_six-img-2" src="./image/rectangle.png">
+                  <span class="item_six-subtext1">บุคคลทั่วไป (23,105 ราย)</span> <br>
+                <img class="item_six-img-3" src="./image/rectangle.png">
+                  <span class="item_six-subtext1">นิติบุคคล (1,003 ราย)</span>
               </div>
             </div>
             <div class="item_six-card-titletwo">
-              สินค้าส่งออกของ <br />
-              ผู้ประกอบการ NEA
+              <p class="item_six-subtext2">74%</p>
+              <p class="item_six-subtext3">เข้าถึงภูมิภาค</p>
             </div>
           </div>
       </div>
