--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Customer</title>
-    <link rel="stylesheet" href="/Customer's Journey/index.css" />
+    <link rel="stylesheet" href="/index.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -226,17 +226,17 @@
 
       <div class="item four">
         <div class="item_four-d1-select">
-          <select id="select1"
-            class="form-select mb-3">
+          <select id="select1" class="form-select mb-3">
             <option selected disabled>ปี</option>
             <option value="1">One</option>
           </select>
-          <select id="select1"
+          <select
+            id="select1"
             class="form-select form-select-lg mb-3"
-            aria-label=".form-select-lg example">
+            aria-label=".form-select-lg example"
+          >
             <option selected disabled>ไตรมาส</option>
             <option value="1">One</option>
-
           </select>
         </div>
         <div class="item_four-title">มูลค่าส่งออกรวม</div>
@@ -246,7 +246,8 @@
             <p class="item_four-textd1-2">หมื่นล้านบาท</p>
           </div>
           <div class="item_four-textd1-3">
-            ขนาด <br> ผู้ประกอบการ    
+            ขนาด <br />
+            ผู้ประกอบการ
           </div>
         </div>
         <div class="item_four-textd2">
@@ -254,19 +255,17 @@
           <p>API Graph</p>
           <p>API Graph</p>
         </div>
-          <div class="item_four-card-body">
-            <div class="item_four-card-title">TOP 5</div>
-            <div class="item_four-card-titletwo">
-              ประเทศที่ส่งออก <br />
-              มูลค่าสูงสุด
-            </div>
+        <div class="item_four-card-body">
+          <div class="item_four-card-title">TOP 5</div>
+          <div class="item_four-card-titletwo">
+            ประเทศที่ส่งออก <br />
+            มูลค่าสูงสุด
           </div>
-          <div class="item_four-card-bodytwo">
-            <div class="item_four-card-title-2">ประเทศ</div>
-            <div class="item_four-card-titletwo-2">
-              มูลค่าสูงสุด (ลบ.)
-            </div>
-          </div>
+        </div>
+        <div class="item_four-card-bodytwo">
+          <div class="item_four-card-title-2">ประเทศ</div>
+          <div class="item_four-card-titletwo-2">มูลค่าสูงสุด (ลบ.)</div>
+        </div>
       </div>
 
       <div class="item five">
@@ -289,25 +288,63 @@
 
       <div class="item six">
         <div class="item_six-title">
-          จำนวนประชากรและผู้ประกอบการ <br> ที่เข้าถึง NEA
+          จำนวนประชากรและผู้ประกอบการ <br />
+          ที่เข้าถึง NEA
         </div>
-        <p class="item_six-text1">(จำนวนครั้ง) *สถิติ E-Learning รวมภายใต้สถิติบุคคลทั่วไป</p>
-            <div class="item_six-card-body">
-            <div class="item_six-card-title">
-              <div class="item_six-d1">
-                <img class="item_six-img-1" src="./image/rectangle.png">
-                  <span class="item_six-subtext1">รวม (24,108 ราย)</span> <br>
-                <img class="item_six-img-2" src="./image/rectangle.png">
-                  <span class="item_six-subtext1">บุคคลทั่วไป (23,105 ราย)</span> <br>
-                <img class="item_six-img-3" src="./image/rectangle.png">
-                  <span class="item_six-subtext1">นิติบุคคล (1,003 ราย)</span>
-              </div>
-            </div>
-            <div class="item_six-card-titletwo">
-              <p class="item_six-subtext2">74%</p>
-              <p class="item_six-subtext3">เข้าถึงภูมิภาค</p>
+        <p class="item_six-text1">
+          (จำนวนครั้ง) *สถิติ E-Learning รวมภายใต้สถิติบุคคลทั่วไป
+        </p>
+        <div class="item_six-card-body">
+          <div class="item_six-card-title">
+            <div class="item_six-d1">
+              <img class="item_six-img-1" src="./image/rectangle.png" />
+              <span class="item_six-subtext1">รวม (24,108 ราย)</span> <br />
+              <img class="item_six-img-2" src="./image/rectangle.png" />
+              <span class="item_six-subtext1">บุคคลทั่วไป (23,105 ราย)</span>
+              <br />
+              <img class="item_six-img-3" src="./image/rectangle.png" />
+              <span class="item_six-subtext1">นิติบุคคล (1,003 ราย)</span>
             </div>
           </div>
+          <div class="item_six-card-titletwo">
+            <p class="item_six-subtext2">74%</p>
+            <p class="item_six-subtext3">เข้าถึงภูมิภาค</p>
+          </div>
+        </div>
+        <div class="item_four-textd2">
+          <p>API Graph</p>
+          <p>API Graph</p>
+          <p>API Graph</p>
+        </div>
+        <hr class="item_eight-hr">
+        <div class="card-itemfour">
+          <div class="item_four-d1">
+            <div class="item_four-d1text1">
+              <span class="font-1 mt-2 font-color-red">10</span> 
+              <p class="item_four-text2 font-2">
+                <span>หลักสูตร</span> <br>
+                <span>E-Learning ยอดนิยม</span>
+              </p>
+              <p>1 อาหาร 977 ราย</p>
+              <p>2 เครื่องสำอาง 508 ราย</p>
+              <p>3 อาหารและเครื่องดื่ม 466 ราย</p>
+              <p>4 ของขวัญ 413 ราย</p>
+              <p>5 ของใช้ในบ้าน 407ราย</p>
+            </div>
+            <div class="item_seven-d1text2">
+              <span class="font-1 mt-2 font-color-red">10</span> 
+              <p class="item_four-text2 font-2">
+                <span>หลักสูตร</span> <br>
+                <span>ยอดนิยมของ NEA</span>
+              </p>
+              <p class="bg-p">ความรู้พื้นฐานด้านการค้าระหว่างประเทศ</p>
+              <p>1. ความรู้เบื้องต้นเพื่อการส่งออก</p>
+              <p></p>
+              <p></p>
+              <p>10 อื่น ๆ 205 ราย</p>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="item seven">
@@ -320,51 +357,51 @@
             </div>
           </div>
           <div class="item_seven-d1">
-           <div class="item_seven-d1text1">
-            <p>1 อาหาร 977 ราย</p>
-            <p>2 เครื่องสำอาง 508 ราย</p>
-            <p>3 อาหารและเครื่องดื่ม 466 ราย</p>
-            <p>4 ของขวัญ 413 ราย</p>
-            <p>5 ของใช้ในบ้าน 407ราย</p>
-           </div>
-           <div class="item_seven-d1text2">
-            <p>6 แฟชั่น เครื่องหนัง 383 ราย</p>
-            <p>7 สิ่งทอ เครื่องหนัง และเครื่องประดับ 375 ราย</p>
-            <p>8 บริการทางการค้า 360 ราย</p>
-            <p>9 ผลิตภัณฑ์เพื่อความงาม 233 ราย</p>
-            <p>10 อื่น ๆ 205 ราย</p>
-           </div>
+            <div class="item_seven-d1text1">
+              <p>1 อาหาร 977 ราย</p>
+              <p>2 เครื่องสำอาง 508 ราย</p>
+              <p>3 อาหารและเครื่องดื่ม 466 ราย</p>
+              <p>4 ของขวัญ 413 ราย</p>
+              <p>5 ของใช้ในบ้าน 407ราย</p>
+            </div>
+            <div class="item_seven-d1text2">
+              <p>6 แฟชั่น เครื่องหนัง 383 ราย</p>
+              <p>7 สิ่งทอ เครื่องหนัง และเครื่องประดับ 375 ราย</p>
+              <p>8 บริการทางการค้า 360 ราย</p>
+              <p>9 ผลิตภัณฑ์เพื่อความงาม 233 ราย</p>
+              <p>10 อื่น ๆ 205 ราย</p>
+            </div>
           </div>
         </div>
       </div>
 
       <div class="item eight">
-         <div class="item_eight-d1">
-           <div class="item_eight-d1text1">
+        <div class="item_eight-d1">
+          <div class="item_eight-d1text1">
             <p>สหรัฐอเมริกา</p>
             <p>จีน</p>
             <p>ญี่ปุ่น</p>
             <p>อินโดนีเซีย</p>
             <p>ออสเตรเลีย</p>
-           </div>
-           <div class="item_eight-d1text2">
+          </div>
+          <div class="item_eight-d1text2">
             <p>128,382</p>
             <p>83,048</p>
             <p>78,165</p>
             <p>54,432</p>
             <p>51,432</p>
-           </div>
           </div>
-          <hr class="item_eight-hr">
-          <div class="item_eight-d1">
-            <div class="item_eight-d1text1">
+        </div>
+        <hr class="item_eight-hr" />
+        <div class="item_eight-d1">
+          <div class="item_eight-d1text1">
             <p>รวม</p>
-           </div>
-           <div class="item_eight-d1text2">
+          </div>
+          <div class="item_eight-d1text2">
             <p>395,405</p>
-           </div>
           </div>
-          </div>
+        </div>
+      </div>
 
       <div class="item nine">
         9
